--- a/page.html
+++ b/page.html
@@ -3,9 +3,9 @@
 
     <style>
         #div1{
-            width: 100px;
-            height: 100px;
-            background: red;
+            width: 200px;
+            height: 200px;
+            background: yellow;
         }
     </style>
 </head>
