border add by qq

--- a/page.html
+++ b/page.html
@@ -6,6 +6,7 @@
             width: 200px;
             height: 200px;
             background: yellow;
+            border: 1px solid red;
         }
     </style>
 </head>
