modify again by qq

--- a/page.html
+++ b/page.html
@@ -6,10 +6,12 @@
             width: 200px;
             height: 200px;
             background: yellow;
+            border: 1px solid ;
+
         }
     </style>
 </head>
 <body>
-    <div id="div1">修改</div>
+    <div id="div1">修改:修改</div>
 </body>
 </html>
